--- a/META.yml
+++ b/META.yml
@@ -18,7 +18,8 @@ no_index:
     - inc
     - t
 requires:
+  XSLoader: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
