--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,10 @@ abstract: 'Produces warnings when unused variables are detected'
 author:
   - 'Goro Fuji <gfuji(at)cpan.org>'
 build_requires:
+  Test::More: 0.62
   Test::Warn: 0.11
 configure_requires:
-  ExtUtils::MakeMaker: 6.44
+  ExtUtils::MakeMaker: 6.46
 distribution_type: module
 generated_by: 'Module::Install version 0.77'
 license: perl
@@ -18,8 +19,8 @@ no_index:
     - inc
     - t
 requires:
-  XSLoader: 0
+  XSLoader: 0.06
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+version: 0.021
